# auto_resume

./: .codecov.yml  .editorconfig  .gitignore  Makefile  NEXT_STEPS.md  README.md  docker-compose.yml  requirements-dev.txt  requirements-prod.txt  requirements.txt  setup.ps1  verify_requirements.py
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/v1/: __init__.py  education.py  experience.py  job_description.py  profile.py  project.py  resume.py  skill.py
backend/app/auth/: __init__.py  cognito.py  dependencies.py
backend/app/core/: config.py  db.py
backend/app/services/: profile.py  vector_search.py
backend/tests/: conftest.py  test_api_profile.py  test_auth.py  test_encryption.py  test_latex_escape.py
docs/: ARCHITECTURE.md  SUPABASE_SETUP.md  TESTING.md  schema.sql
frontend/: jest.config.js  package.json  pnpm-lock.yaml
frontend/__tests__/: generate.test.tsx
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/(dashboard)/: layout.tsx
frontend/app/(dashboard)/dashboard/: page.tsx
frontend/app/(dashboard)/experience/: page.tsx
frontend/app/(dashboard)/generate/: page.tsx
frontend/app/(dashboard)/profile/: page.tsx
frontend/app/(dashboard)/resumes/[id]/: page.tsx
frontend/app/callback/: page.tsx
frontend/app/login/: page.tsx
migrations/: README.md  alembic.ini  env.py  pyproject.toml  seed.py
migrations/versions/: 001_initial_schema.py
shared/: pyproject.toml
shared/app/: __init__.py  constants.py
shared/app/schemas/: profile.py  resume_request.py
shared/app/utils/: encryption.py  latex.py  validation.py
shared/shared/: __init__.py
shared/shared/app/schemas/: __init__.py  ai_output.py
shared/shared/app/utils/: __init__.py
shared/tests/: __init__.py  test_encryption.py  test_latex.py
templates/jakes-resume/: README.md  resume.cls  template.tex.jinja2
worker/: pyproject.toml
worker/app/: __init__.py  celery_app.py
worker/app/ai/: __init__.py  mock_adapter.py  ollama_adapter.py  openai_adapter.py  provider.py
worker/app/core/: __init__.py  config.py
worker/app/latex/: __init__.py  compiler.py  renderer.py
worker/app/storage/: __init__.py  client.py
worker/app/tasks/: embeddings.py  generate_resume.py
worker/tests/: __init__.py  conftest.py  test_ai_mock_adapter.py  test_latex_renderer.py  test_pdf_compiler.py
