[tool.poetry]
name = "shared"
version = "0.1.0"
description = "Shared utilities and schemas for AI Resume Creator"
authors = ["Your Name <you@example.com>"]
packages = [{include = "shared", from = "."}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.11.7"
cryptography = "^41.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

