[tool.poetry]
name = "worker"
version = "0.1.0"
description = "Celery worker for AI Resume Creator"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
celery = "^5.3.4"
redis = "^5.0.1"
supabase = "^2.0.0"
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
openai = "^1.3.0"
python-docx = "^1.1.0"
sentence-transformers = "^2.2.2"
jinja2 = "^3.1.2"
cryptography = "^41.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

